# azure-podcast-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: lint.yml  package.yml  pr-labeler.yml  release-drafter.yml
app/: .env.sample  app.py  configurations.py  const.py  profiles.py
app/providers/: base.py
app/providers/document/: azure_document_intelligence.py  base.py  markitdown.py
app/providers/llm/: azure_openai.py  base.py
app/providers/speech/: azure_speech.py  azure_speech_multitalker.py  base.py  basic_speech.py
app/utils/: cost.py  document.py  identity.py  llm.py  speech.py
docs/: PODCAST_STYLE_AND_TONE.md
infra/: main.bicep  main.parameters.json
infra/modules/: cognitive.bicep  containerapp-roles.bicep  containerapp.bicep
